5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1764_674.log
== TEST (2019-05-30 10:27:16) 
-- CODE:
# ADRIANA BINDA LIMA
# INFORMACOES BASICAS DE UM VETOR

# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

u = array(eval(input()))
e = sum(u)/size(u)
print(size(u))
print(u[0])
print(u[-1])
print(max(u))
print(min(u))
print(sum(u))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    u = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:28:02) 
-- CODE:
# ADRIANA BINDA LIMA
# INFORMACOES BASICAS DE UM VETOR

# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import*
u = array(eval(input()))
e = sum(u)/size(u)
print(size(u))
print(u[0])
print(u[-1])
print(max(u))
print(min(u))
print(sum(u))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:48) 
-- CODE:
# ADRIANA BINDA LIMA
# INFORMACOES BASICAS DE UM VETOR

# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import*
u = array(eval(input()))
e = sum(u)/size(u)
print(size(u))
print(u[0])
print(u[-1])
print(max(u))
print(min(u))
print(sum(u))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:00:13) 
-- CODE:
# ADRIANA BINDA LIMA
# INFORMACOES BASICAS DE UM VETOR

# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import*
u = array(eval(input()))
e = sum(u)/size(u)
print(size(u))
print(u[0])
print(u[-1])
print(max(u))
print(min(u))
print(sum(u))
print(round(e,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:00:41) 
-- CODE:
# ADRIANA BINDA LIMA
# INFORMACOES BASICAS DE UM VETOR

# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import*
u = array(eval(input()))
e = sum(u)/size(u)
print(size(u))
print(u[0])
print(u[-1])
print(max(u))
print(min(u))
print(sum(u))
print(round(e,2))

-- EXECUTION TIME:
0.476692
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
